second try to fix problems with hidden <input> tag, so that there's no overflow, fixes #11275
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22394 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -93,9 +93,10 @@
 }
 
 .dijitOffScreen {
-	position: absolute !important;
-	visibility: hidden !important;
-	top: -10000px !important;
+	position: absolute;
+	visibility: hidden;
+	left: 50%;
+	top: -10000px;
 }
 
 /*
